新增body部分——文章列表及侧边信息

--- a/pages/index.html
+++ b/pages/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../css/reading-model.css" type="text/css">  
     <link rel="stylesheet" href="../css/body-left-banner.css" type="text/css"> 
     <link rel="stylesheet" href="../css/body-right.css" type="text/css"> 
+    <link rel="stylesheet" href="../css/body-left-content.css" type="text/css">
     <title>首页</title>
 </head>
 <body>
@@ -139,9 +140,234 @@
             <div class="row-left">
                 <!-- banner -->
                 <div class="row-left-banner" id="row-left-banner"></div>
+                <!-- content -->
+                <div id="list-container">
+                    <!-- 文章列表模块 -->
+                    <ul class="note-list">
+                        <li id="note-list-a">
+                            <div class="content">
+                                <a href="https://www.jianshu.com/p/10640c0c0648" class="content-title" target="_blank">Vim实践与学习-03文件</a>
+                                <p class="content-abstract">
+                                    这里包含在 shell 下执行 vim,以及 vim 中关于文件操作的内容。 打开一个文件 file 进行编辑等操作 打开文件，并将光标置于第 ...
+                                </p>
+                                <div class="content-meta">
+                                    <span class="meta-icon">
+                                        <img src="../images/钻石.png" alt="diamond">1.7
+                                    </span>
+                                    <a class="nickname" href="https://www.jianshu.com/u/fb6de6ebc270" target="_blank">罗京壹</a>
+                                    <a href="https://www.jianshu.com/p/10640c0c0648" target="_blank">
+                                        <img src="../images/message.png" alt="message">6
+                                    </a>
+                                    <span>
+                                        <img src="../images/Love.png" alt="love">9
+                                    </span>
+                                </div>
+                            </div>
+                        </li>
+                        <li id="note-list-b">
+                            <a href="https://www.jianshu.com/p/1cf3ad409fce" class="wrap-img" target="_blank">
+                                <img src="https://upload-images.jianshu.io/upload_images/19653377-db938124691ec61a.png?imageMogr2/auto-orient/strip|imageView2/1/w/360/h/240" alt="120">
+                            </a>
+                            <div class="content have-img">
+                                <a href="https://www.jianshu.com/p/1cf3ad409fce" class="content-title" target="_blank">vue图表插件echarts简单使用办法</a>
+                                <p class="content-abstract">
+                                    一、了解Echarts ECharts，一个使用 JavaScript 实现的开源可视化库，可以流畅的运行在 PC 和移动设备上，兼容当前绝大部...   
+                                </p>
+                                <div class="content-meta">
+                                    <span class="meta-icon">
+                                        <img src="../images/钻石.png" alt="diamond">2.2
+                                    </span>
+                                    <a class="nickname" href="https://www.jianshu.com/u/b55d9bb4282e" target="_blank">王芃皓</a>
+                                    <a href="https://www.jianshu.com/p/1cf3ad409fce" target="_blank">
+                                        <img src="../images/message.png" alt="message">9
+                                    </a>
+                                    <span>
+                                        <img src="../images/Love.png" alt="love">9
+                                    </span>
+                                </div>
+                            </div>
+                        </li>
+                        <li id="note-list-c">
+                            <a href="https://www.jianshu.com/p/3e44bbd511e0" class="wrap-img" target="_blank">
+                                <img src="https://upload-images.jianshu.io/upload_images/16582607-dbeab7bf3044d6d0.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/360/h/240" alt="120">
+                            </a>
+                            <div class="content have-img">
+                                <a href="https://www.jianshu.com/p/3e44bbd511e0" class="content-title" target="_blank">一城绿阴</a>
+                                <p class="content-abstract">
+                                    我爱看绿阴，但是绿阴似乎是专属夏日的。明媚的春日，绿阴刚刚萌芽，它如刚出生的婴儿给人欣喜，枝丫上吐出绒绒的绿，远远看去...       
+                                </p>
+                                <div class="content-meta">
+                                    <span class="meta-icon">
+                                        <img src="../images/钻石.png" alt="diamond">7.6
+                                    </span>
+                                    <a class="nickname" href="https://www.jianshu.com/u/5f408c3c46a7" target="_blank">拈花菩提000</a>
+                                    <a href="https://www.jianshu.com/p/3e44bbd511e0" target="_blank">
+                                        <img src="../images/message.png" alt="message">11
+                                    </a>
+                                    <span>
+                                        <img src="../images/Love.png" alt="love">77
+                                    </span>
+                                </div>
+                            </div>
+                        </li>
+                        <li id="note-list-d">
+                            <a href="https://www.jianshu.com/p/72f12660867f" class="wrap-img" target="_blank">
+                                <img src="https://upload-images.jianshu.io/upload_images/16589082-84209a9abd6f4919.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/360/h/240" alt="120">
+                            </a>
+                            <div class="content have-img">
+                                <a href="https://www.jianshu.com/p/72f12660867f" class="content-title" target="_blank">说走就走的青春</a>
+                                <p class="content-abstract">
+                                    说走就走，是人生最华美的奢侈，也是最灿烂的自由  汪晓敏  没有出发，也许我们这...      
+                                </p>
+                                <div class="content-meta">
+                                    <span class="meta-icon">
+                                        <img src="../images/钻石.png" alt="diamond">23.2
+                                    </span>
+                                    <a class="nickname" href="https://www.jianshu.com/u/2329625bfd96" target="_blank">一花一世界wy</a>
+                                    <a href="https://www.jianshu.com/p/1cf3ad409fce" target="_blank">
+                                        <img src="../images/message.png" alt="message">77
+                                    </a>
+                                    <span>
+                                        <img src="../images/Love.png" alt="love">123
+                                    </span>
+                                </div>
+                            </div>
+                        </li>
+                        <li target="_blank" class="flow-ad">
+                            <a href="https://cloud.baidu.com/campaign/Annualceremony-2020/index.html?track=cp:dsp|pf:pc|pp:wangyiyoudao-huodong-20niandushengdian-jianshuPC|pu:lanziguzhangyunfuwuqi1zhe-cebianlan|ci:2020ndsd|kw:2185456" class="wrap-img" target="_blank">
+                                <img src="https://oimageb7.ydstatic.com/image?id=-7370908443546259870&product=adpublish&w=300&h=200&sc=0&rm=2&gsb=0&gsbd=60" alt="120">
+                            </a>
+                            <div class="content have-img">
+                                <a href="https://cloud.baidu.com/campaign/Annualceremony-2020/index.html?track=cp:dsp|pf:pc|pp:wangyiyoudao-huodong-20niandushengdian-jianshuPC|pu:lanziguzhangyunfuwuqi1zhe-cebianlan|ci:2020ndsd|kw:2185456" class="content-title" target="_blank">2020百度智能云年度盛典</a>
+                                <p class="content-abstract">
+                                    【年度盛典】百度智能云服务器1核2G仅售123元/年      
+                                </p>
+                                <div class="content-meta">
+                                    <span class="ad-badge">广告</span>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <a href="../pages/index.html" class="load-more">阅读更多</a>
             </div>
             <!-- 右边栏（占1/3） -->
-            <div class="row-right"></div>
+            <div class="row-right">
+                <div class="board">
+                    <a href="https://www.jianshu.com/mobile/club" target="_blank">
+                        <img src="https://cdn2.jianshu.io/assets/web/banner-s-club-aa8bdf19f8cf729a759da42e4a96f366.png" alt="Banner s club">
+                    </a>
+                    <a href="https://www.jianshu.com/mobile/books?category_id=284" target="_blank">
+                        <img src="https://cdn2.jianshu.io/assets/web/banner-s-7-1a0222c91694a1f38e610be4bf9669be.png" alt="Banner s 7">
+                    </a>
+                    <a href="https://www.jianshu.com/publications" target="_blank">
+                        <img src="https://cdn2.jianshu.io/assets/web/banner-s-5-4ba25cf5041931a0ed2062828b4064cb.png" alt="Banner s 5">
+                    </a>
+                    <a href="https://www.jianshu.com/c/e048f1a72e3d?utm_medium=index-banner-s&utm_source=desktop" target="_blank">
+                        <img src="https://cdn2.jianshu.io/assets/web/banner-s-6-c4d6335bfd688f2ca1115b42b04c28a7.png" alt="Banner s 6">
+                    </a>
+                </div>
+                <!-- APP下载提示 -->
+                <a href="https://www.jianshu.com/apps?utm_medium=desktop&utm_source=index-aside-click" id="index-aside-download" target="_blank">
+                    <img src="https://cdn2.jianshu.io/assets/web/download-index-side-qrcode-cb13fc9106a478795f8d10f9f632fccf.png" alt="Download index side qrcode" class="download-img">
+                    <div class="download-info">
+                        <div class="download-title">
+                            下载简书手机App
+                            <img src="../images/箭头.png">
+                        </div>
+                        <div class="download-description">随时随地发现和创作内容</div>
+                        <div class="download-popover" id="download-popover">
+                            <div class="download-triangle"></div>
+                            <img src="https://cdn2.jianshu.io/assets/web/download-index-side-qrcode-cb13fc9106a478795f8d10f9f632fccf.png" alt="">
+                        </div>
+                    </div>
+                </a>
+                <!-- 推荐作者 -->
+                <div class="recommended-author-wrap">
+                    <div class="recommended-authors">
+                        <div class="author-title">
+                            <span>推荐作者</span>
+                            <a class="page-change">
+                                <img src="../images/exchange.png">换一批
+                            </a>
+                        </div>
+                        <ul class="author-list">
+                            <li>
+                                <a href="https://www.jianshu.com/u/51b4ef597b53?utm_source=desktop&utm_medium=index-users" target="_blank" class="author-list-img">
+                                    <img src="https://upload.jianshu.io/users/upload_avatars/9988193/fc26c109-1ae6-4327-a298-2def343e9cd8.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/96/h/96/format/webp">
+                                </a>
+                                <a class="author-list-follow">
+                                    <img src="../images/_plus .png">关注
+                                </a>
+                                <a href="https://www.jianshu.com/u/51b4ef597b53?utm_source=desktop&utm_medium=index-users" target="_blank" class="author-list-name">董克平日记</a>
+                                <p>
+                                    写了812.8k字 · 2.6k喜欢
+                                </p>
+                            </li>
+                            <li>
+                                <a href="https://www.jianshu.com/u/c5a2ce84f60b?utm_source=desktop&utm_medium=index-users" target="_blank" class="author-list-img">
+                                    <img src="https://upload.jianshu.io/users/upload_avatars/14715425/e0668349-8c75-43db-8a9d-c388e5f00d0d.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/96/h/96/format/webp">
+                                </a>
+                                <a class="author-list-follow">
+                                    <img src="../images/_plus .png">关注
+                                </a>
+                                <a href="https://www.jianshu.com/u/c5a2ce84f60b?utm_source=desktop&utm_medium=index-users" target="_blank" class="author-list-name">
+                                    简书钻首席小管家
+                                </a>
+                                <p>
+                                    写了225.2k字 · 159.2k喜欢
+                                </p>
+                            </li>
+                            <li>
+                                <a href="https://www.jianshu.com/u/40ec0e1adf50?utm_source=desktop&utm_medium=index-users" target="_blank" class="author-list-img">
+                                    <img src="https://upload.jianshu.io/users/upload_avatars/4263857/34d7b217-7338-48fe-81a1-98367fecdbee.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/96/h/96/format/webp">
+                                </a>
+                                <a class="author-list-follow">
+                                    <img src="../images/_plus .png">关注
+                                </a>
+                                <a href="https://www.jianshu.com/u/40ec0e1adf50?utm_source=desktop&utm_medium=index-users" target="_blank" class="author-list-name">
+                                    王小麦
+                                </a>
+                                <p>
+                                    写了139.7k字 · 40.3k喜欢       
+                                </p>
+                            </li>
+                            <li>
+                                <a href="https://www.jianshu.com/u/ef4f2422125f?utm_source=desktop&utm_medium=index-users" target="_blank" class="author-list-img">
+                                    <img src="https://upload.jianshu.io/users/upload_avatars/301940/189d69dd-af7c-4290-9e2c-89e98acf3603.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/96/h/96/format/webp">
+                                </a>
+                                <a class="author-list-follow">
+                                    <img src="../images/_plus .png">关注
+                                </a>
+                                <a href="https://www.jianshu.com/u/ef4f2422125f?utm_source=desktop&utm_medium=index-users" target="_blank" class="author-list-name">
+                                    卢璐说
+                                </a>
+                                <p>
+                                    写了1378.5k字 · 28.3k喜欢            
+                                </p>
+                            </li>
+                            <li>
+                                <a href="https://www.jianshu.com/u/90e981ba3d8d?utm_source=desktop&utm_medium=index-users" target="_blank" class="author-list-img">
+                                    <img src="https://upload.jianshu.io/users/upload_avatars/2631077/dc99c361412c?imageMogr2/auto-orient/strip|imageView2/1/w/96/h/96/format/webp">
+                                </a>
+                                <a class="author-list-follow">
+                                    <img src="../images/_plus .png">关注
+                                </a>
+                                <a href="https://www.jianshu.com/u/90e981ba3d8d?utm_source=desktop&utm_medium=index-users" target="_blank" class="author-list-name">
+                                    木清琳
+                                </a>
+                                <p>
+                                    写了297k字 · 29.4k喜欢       
+                                </p>
+                            </li>
+                        </ul>
+                        <a href="https://www.jianshu.com/recommendations/users?utm_source=desktop&utm_medium=index-users" target="_blank" class="find-more">
+                            <div>查看全部</div>                           
+                            <img src="../images/jiantou.png">
+                        </a>
+                    </div>
+                </div>
+            </div>
          </div>       
      </div>
      
@@ -151,6 +377,7 @@
 <script src="../js/beta.js"></script>
 <script src="../js/reading-model.js"></script>
 <script src="../js/body-left-banner.js"></script>
+<script src="../js/body-right.js"></script>
 <script>
 /**
  * banner配置项
